k8s/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-dev
  labels:
    name: k8s-dev
