k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress-web
  namespace: k8s-dev
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.lynasovann.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-web
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress-api
  namespace: k8s-dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.lynasovann.site
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: k8s-api
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress-minio
  namespace: k8s-dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.lynasovann.site
      http:
        paths:
          - path: /minio(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: k8s-minio
                port:
                  number: 9000
